force-app/main/default/objects/rtms__CustomerPayment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QuickBooks Account</relationshipLabel>
    <relationshipName>QB_Account</relationshipName>
</CustomField>