force-app/main/default/objects/rtms__CustomerPayment__c/fields/Check_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Reference_Number__c</fullName>
    <label>Check Reference Number</label>
    <type>Text</type>
    <length>80</length>
</CustomField>