force-app/main/default/objects/rtms__CustomerPayment__c/fields/CustomerInvoice__c.field-meta.xml
<CustomField>
    <fullName>CustomerInvoice__c</fullName>
    <label>Customer Invoice</label>
    <type>Lookup</type>
    <referenceTo>rtms__CustomerInvoice__c</referenceTo>
    <relationshipLabel>QuickBooks Invoice</relationshipLabel>
    <relationshipName>QB_CustomerInvoice</relationshipName>
</CustomField>