force-app/main/default/objects/rtms__CustomerPayment__c/fields/QuickBooks_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Payment_Id__c</fullName>
    <label>QuickBooks Payment Id</label>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
</CustomField>